Portfolio Api Gateway finished
